workloads-miyembro-aws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
spec:
  selector:
    matchLabels:
      app: config-server
  replicas: 1
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: arjayfuentes24/config-server-miyembro:latest
          ports:
            - containerPort: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-service
  template:
    metadata:
      labels:
        app: discovery-service
    spec:
      containers:
        - name: discovery-service
          image: arjayfuentes24/discovery-miyembro:latest
          ports:
            - containerPort: 8761
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: member-service
  template:
    metadata:
      labels:
        app: member-service
    spec:
      containers:
        - name: member-service
          image: arjayfuentes24/member-miyembro:latest
          ports:
            - containerPort: 8050
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organization-service
  template:
    metadata:
      labels:
        app: organization-service
    spec:
      containers:
        - name: organization-service
          image: arjayfuentes24/organization-miyembro:latest
          ports:
            - containerPort: 8090
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: arjayfuentes24/gateway-miyembro:latest
          ports:
            - containerPort: 8222
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-miyembro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-miyembro
  template:
    metadata:
      labels:
        app: angular-miyembro
    spec:
      containers:
        - name: angular-miyembro
          image: arjayfuentes24/angular-miyembro:latest
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin:latest
          ports:
            - containerPort: 9411
