ingress-miyembro-aws-other.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miyembro-ingress-other
spec:
  ingressClassName: nginx
  rules:
    - host: a70c9e322b2324cf287c974af6a9c745-1534476975.eu-north-1.elb.amazonaws.com
      http:
        paths:
          - path: /eureka
            pathType: Prefix
            backend:
              service:
                name: discovery-service
                port:
                  number: 8761
